build/00009/YOUTUBE_GPIO1000rotary3_esp32.log
Processing esp32 (board: esp32doit-devkit-v1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32doit-devkit-v1.html
PLATFORM: Espressif 32 (55.3.35) > DOIT ESP32 DEVKIT V1
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting YOUTUBE_GPIO1000rotary3.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
Building in release mode
Compiling .pio/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:1:
.pio/libdeps/esp32/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:9:17: error: 'D6' was not declared in this scope; did you mean 'T6'?
    9 |   new h4pOutput(D6,ACTIVE_HIGH),
      |                 ^~
      |                 T6
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:10:17: error: 'D7' was not declared in this scope; did you mean 'T7'?
   10 |   new h4pOutput(D7,ACTIVE_HIGH),
      |                 ^~
      |                 T7
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:11:17: error: 'D8' was not declared in this scope; did you mean 'T8'?
   11 |   new h4pOutput(D8,ACTIVE_HIGH),
      |                 ^~
      |                 T8
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:12:1: error: could not convert '{<expression error>, <expression error>, <expression error>}' from '<brace-enclosed initializer list>' to 'std::vector<h4pOutput*>'
   12 | };
      | ^
      | |
      | <brace-enclosed initializer list>
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:14:23: error: 'D1' was not declared in this scope; did you mean 'y1'?
   14 | h4pEncoderAuto rotary(D1,D2,INPUT_PULLUP,ACTIVE_HIGH,0,2,1,0,false);
      |                       ^~
      |                       y1
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:14:26: error: 'D2' was not declared in this scope; did you mean 'T2'?
   14 | h4pEncoderAuto rotary(D1,D2,INPUT_PULLUP,ACTIVE_HIGH,0,2,1,0,false);
      |                          ^~
      |                          T2
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:15:21: error: 'D0' was not declared in this scope; did you mean 'y0'?
   15 | h4pRetriggering pir(D0,INPUT,ACTIVE_HIGH,10000,new npPUBLISHONOFF);
      |                     ^~
      |                     y0
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino: In function 'void onGPIO(int, int)':
/home/runner/work/h4plugins/h4plugins/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino:18:11: error: 'D1' was not declared in this scope; did you mean 'y1'?
   18 |   if(pin==D1){
      |           ^~
      |           y1
*** [.pio/build/esp32/src/YOUTUBE_GPIO1000rotary3.ino.cpp.o] Error 1
========================== [FAILED] Took 9.49 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
esp32          FAILED    00:00:09.491
==================== 1 failed, 0 succeeded in 00:00:09.491 ====================